dark mode toggel

--- a/chatbot.html
+++ b/chatbot.html
@@ -7,26 +7,44 @@
   <link rel="stylesheet" href="chatbot.css">
 </head>
 <body>
+  <div class="light-mode">
   <div class="chatbot">
     <header>
-      <h2>
-        Chatbot
-      </h2>
+      <div class="header-left">
+        <img src="usthb.png" alt="USTHB" class="logo">
+        <h2>
+          Chatbot
+        </h2>
+      </div>
+      <div class="dark">
+        <input type="checkbox" id="dark-mode" class="input">
+        <label for="dark-mode" class="label">
+          <div class="circle"></div>
+        </label>
+      </div>
     </header>
     <div class="chatbox">
       <section class="incoming chat">
         <span class="symbole"></span>
         <p>Hey! How can I help you today</p>
       </section>
-      <setion class="outgoing chat">
-       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id ad animi maxime, fugit odit eligendi, officia rerum, ipsa quam assumenda molestiae! Debitis voluptate, ipsum amet ipsam asperiores ut ratione porro?</p>
-      </setion>
+      <section class="outgoing chat">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id ad animi maxime, fugit odit eligendi, officia rerum, ipsa quam assumenda molestiae! Debitis voluptate, ipsum amet ipsam asperiores ut ratione porro?</p>
+      </section>
       <div class="chat-input">
         <textarea placeholder="Enter your question.." id=""></textarea>
         <span id="send-btn" class="symbole"><?xml version="1.0" ?><svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M4.10514201,11.8070619 L2.74013818,2.2520351 L22.236068,12 L2.74013818,21.7479649 L4.10514201,12.1929381 L4.87689437,12 L4.10514201,11.8070619 Z M5.25986182,5.7479649 L5.89485799,10.1929381 L13.1231056,12 L5.89485799,13.8070619 L5.25986182,18.2520351 L17.763932,12 L5.25986182,5.7479649 Z" fill-rule="evenodd"/></svg></span>
       </div>
     </div>
   </div>
+</div>
+ 
+
+
+
+  
+  
+
   <script src="chatbot.js"></script>
 </body>
 </html>
