--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title> Startup Assistant </title>
   <link rel="stylesheet" href="chatbot.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
       <div class="header-left">
         <img src="usthb.png" alt="USTHB" class="logo">
         <h2>
-          Chatbot
+          Startup Assistant 
         </h2>
       </div>
       <div class="dark">
@@ -26,7 +26,7 @@
     <div class="chatbox">
       <section class="incoming chat">
         <span class="symbole"></span>
-        <p>Hey! How can I help you today</p>
+        <p>Hello! I'm the Algerian Startup Assistant bot. How can I help you today ?  </p>
       </section>
     <!-- <section class="outgoing chat">
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id ad animi maxime, fugit odit eligendi, officia rerum, ipsa quam assumenda molestiae! Debitis voluptate, ipsum amet ipsam asperiores ut ratione porro?</p>
