--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Startup Assistant </title>
+  <link rel="icon" type="image/png" href="usthb.png">
+  <link rel="shortcut icon" type="image/png" href="usthb.png">
   <link rel="stylesheet" href="chatbot.css">
 </head>
 <body>
